--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
+    <title>Welcome to PhantomJS+Selenium: Easy Automated Testing of AJAX-y UIs -- test app example</title>
     <link rel="stylesheet" href="foundation/css/foundation.css" />
     <script src="foundation/js/vendor/modernizr.js"></script>
   </head>
