citation to zurb

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
   </fieldset>
 </form>
+<cite><a href="http://foundation.zurb.com/docs/components/abide.html">ZURB Foundation Abide validation example</a> ;-)</cite>
 </div>
 
 <!--
@@ -110,6 +111,7 @@
   </div>
 </div>
 -->
+
     <script src="foundation/js/vendor/jquery.js"></script>
     <script src="foundation/js/foundation.min.js"></script>
     <script>
